--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ h3{
 }
 .half-width{
     width: 30%;
-    margin: 1px 132px;
     float: left;
     margin-top: 50px;
 }
@@ -20,6 +19,12 @@ h3{
     color: white;
     border-radius: 15px;
     padding: 10px 20px;
+}
+.left-side{
+    margin-right: 1px;
+}
+.right-side{
+    margin-left: 1px;
 }
 .top-banner{
     background-image: url(header-bg.png);
